# Builra

./: CMakeLists.txt  Package.code
Core/products/: CMakeLists.txt
Sources/: CMakeLists.txt
Sources/AndroidPlatform/: AndroidSDK.code  CMakeLists.txt  Plugin.code
Sources/AndroidPlatformPlugin/: PluginMain.code
Sources/ApplePlatform/: ActoolInputFileGroupingStrategy.code  AppIntentsMetadataCompiler.code  AppIntentsMetadataTaskProducer.code  AppIntentsSSUTrainingCompiler.code  AssetCatalogCompiler.code  AssetCatalogCompilerOutputParser.code  CMakeLists.txt  CopyTiffFile.code  CoreDataCompiler.code  CoreMLCompiler.code  DevelopmentAssetsTaskProducer.code  DittoTool.code  EXUtil.code  ExtensionPointExtractorTaskProducer.code  ExtensionPointsCompiler.code  IIGCompiler.code  ImageScaleFactorsInputFileGroupingStrategy.code  InstrumentsPackageBuilderSpec.code  IntentsCompiler.code  InterfaceBuilderCompiler.code  InterfaceBuilderCompilerOutputParser.code  InterfaceBuilderShared.code  LocalizationInputFileGroupingStrategy.code  MacCatalystInfoExtension.code  MetalCompiler.code  MiGCompiler.code  OpenCLCompiler.code  Plugin.code  RealityAssetsCompilerSpec.code  RealityAssetsTaskProducer.code  ReferenceObjectCompiler.code  ResMergerLinkerSpec.code  SceneKitToolSpec.code  StoryboardLinker.code  StringCatalogCompilerOutputParser.code  StubBinaryTaskProducer.code  XCStringsCompiler.code  XCStringsInputFileGroupingStrategy.code
Sources/ApplePlatformPlugin/: PluginMain.code
Sources/BuildService/: BuildDependencyInfo.code  BuildOperationMessages.code  BuildService.code  BuildServiceEntryPoint.code  CMakeLists.txt  ClientExchangeDelegate.code  DependencyGraphMessages.code  DocumentationInfo.code  LocalizationInfo.code  Messages.code  PlanningOperation.code  PreviewInfo.code  ProjectDescriptor.code  Session.code  Tools.code
Sources/BuildServiceBundle/: CMakeLists.txt  main.code
Sources/BuildSystem/: BuildManager.code  BuildOperation.code  BuildOperationExtension.code  BuildSystemCache.code  CMakeLists.txt  CleanOperation.code  DependencyCycleFormatter.code  SandboxViolations.code
Sources/CAS/: CASFSNode.code  CASProtocol.code  CMakeLists.txt  Errors.code  ToolchainCASPlugin.code  plugin_api_t.code
Sources/CLibc/: CMakeLists.txt  libc.c
Sources/CSupport/: CLibRemarksHelper.c  CLibRemarksHelper.h  CLibclang.cpp  CLibclang.h  CMakeLists.txt  CSupport.h  CSupportDefines.h  IndexStore.h  PluginAPI.h  PluginAPI_functions.h  PluginAPI_types.h  empty.code
Sources/CodiraBuild/: BuildAction.code  BuildOperation.code  BuildOperationBacktraceFrame.code  BuildParameters.code  BuildRequest.code  BuildService.code  BuildServiceConnection.code  BuildServiceConsole.code  BuildServiceSession.code  CMakeLists.txt  Channel.code  ClientExchangeSupport.code  CodiraBuild.code  CodiraBuildVersion.code  CompatibilityShims.code  DocumentationSupport.code  IndexingSupport.code  LocalizationSupport.code  MacroEvaluation.code  PreviewSupport.code  ProductPlannerSupport.code  PropertyList.code  ProvisioningTaskInputs.code  SystemInfo.code  TargetGUID.code  Terminal.code  TerminalAttributes.code  UserInfo.code  WorkspaceInfo.code  uildMessage+Protocol.code
Sources/CodiraBuildTestSupport/: CoreQualificationTester.code  EmptyBuildOperationDelegate.code  TaskBacktraces.code  TestBuildOperationDelegate.code  TestUtilities.code  ThroughputTests.code
Sources/Core/: ActivityReporting.code  BuildFileFilteringContext.code  BuildFileResolution.code  BuildParameters.code  BuildRequest.code  BuildRequestContext.code  BuildRuleAction.code  BuildRuleCondition.code  BuildRuleSet.code  CMakeLists.txt  CapturedBuildInfo.code  ClangModuleVerifierOutputParser.code  ClangSerializedDiagnostics.code  CodiraSDK.code  CommandLineArgument.code  ConfiguredTarget.code  Core.code  CustomTaskTypeDescription.code  Dependencies.code  DependencyInfoEditPayload.code  DependencyResolution.code  DiagnosticSupport.code  EnvironmentBindings.code  ExecutableTask.code  FeatureFlag.code  FileSystemSignatureBasedCache.code  FileToBuild.code  LinkageDependencyResolver.code  MacCatalystInfo.code  MacroConfigFileLoader.code  MacroEvaluationExtensions.code  MacroExpressionSourceExtensions.code  OnDemandResources.code  OptimizationRemarks.code  PlannedNode.code  PlannedTask.code  PlannedTaskAction.code  PlatformEnvironment.code  PlatformFiltering.code  PlatformRegistry.code  (+18 more)
Sources/GenericUnixPlatform/: CMakeLists.txt  Plugin.code
Sources/GenericUnixPlatformPlugin/: PluginMain.code
Sources/LLBuild/: CMakeLists.txt  LowLevelBuildSystem.code
Sources/Libc/: CMakeLists.txt  libc.code
Sources/Macro/: CMakeLists.txt  MacroCondition.code  MacroConditionExpression.code  MacroConditionParameter.code  MacroConditionSet.code  MacroConfigFileDiagnostic.code  MacroConfigFileParser.code  MacroDeclaration.code  MacroEvaluationProgram.code  MacroEvaluationScope.code  MacroExpression.code  MacroExpressionDiagnostic.code  MacroExpressionParsing.code  MacroNamespace.code  MacroType.code  MacroValueAssignmentTable.code
Sources/ProjectModel/: CMakeLists.txt  PIFGenerationModel.code
Sources/Protocol/: AsyncSequence.code  BuildAction.code  BuildOperationMessages.code  BuildSettingsInfoMessageTypes.code  CMakeLists.txt  ClientExchangeMessages.code  DependencyClosureMessages.code  DependencyGraphMessages.code  DocumentationMessages.code  IndexingMessages.code  LocalizationMessages.code  MacroEvaluationMessages.code  Message.code  MessageSupport.code  PIFKeyConstants.code  PlanningOperationMessages.code  PreviewMessages.code  ProjectDescriptorMessages.code  ProjectDescriptorTypes.code
Sources/QNXPlatform/: CMakeLists.txt  Plugin.code  QNXSDP.code
Sources/QNXPlatformPlugin/: PluginMain.code
Sources/ServiceCore/: CMakeLists.txt  Request.code  Service.code  ServiceEntryPoint.code  ServiceExtensionPoint.code  ServiceHostConnection.code
Sources/TaskConstruction/: BuildDirectoryContext.code  CMakeLists.txt  DiagnosticSupport.code  StaleFileRemovalContext.code  TaskPlanningDelegate.code  TaskProducerSandboxing.code  XCFrameworkContext.code
Sources/Util/: IO.code  (+98 more)
(+1417 files in other folders)
